--- a/serverless-java-aws-examples/spring-cloud-function-kotlin-aws/pom.xml
+++ b/serverless-java-aws-examples/spring-cloud-function-kotlin-aws/pom.xml
@@ -82,7 +82,13 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+    <dependency>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock-jre8</artifactId>
+      <version>2.31.0</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
