--- a/spring-boot-uploading-and-downloading-files-with-react/frontend/package.json
+++ b/spring-boot-uploading-and-downloading-files-with-react/frontend/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": ">= 16"
   },
   "browserslist": {
     "production": [
