--- a/.github/workflows/sampleJavaMavenProject.yml
+++ b/.github/workflows/sampleJavaMavenProject.yml
@@ -4,45 +4,43 @@ on: [push]
 
 jobs:
   compile:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 11, 12, 13 ]
+        java: [ 21 ]
     name: Java ${{ matrix.java }} compile
     steps:
       - name: Checkout Source Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: Setup Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
           java-package: jdk
           java-version: ${{ matrix.java }}
       - name: Compile the Project
         working-directory: github-actions-java-maven
-        run: mvn -B compile
+        run: ./mvnw -B compile
 
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: compile
     name: Build the Maven Project
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
-          java-version: '11'
+          java-version: '21'
           java-package: jdk
+          cache: 'maven'
+
       - name: Build and test project
         working-directory: github-actions-java-maven
-        run: mvn -B verify
+        run: ./mvnw -B verify
       - name: Upload Maven build artifact
         uses: actions/upload-artifact@v2
         with:
@@ -50,7 +48,7 @@ jobs:
           path: github-actions-java-maven/target/github-actions-java-maven.jar
 
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: build
     name: Build Docker Container and Deploy to Kubernetes
     steps:
